Conserto de algumas funções
